<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="731dp"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nota" />

        <EditText
            android:id="@+id/txtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@+id/viewTipo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_titulo" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@+id/viewTitulo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_contenido" />

        <EditText
            android:id="@+id/txtContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@+id/viewContenido"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCamara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_camara"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/time_selected_is"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/notifications_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            tools:text="12:00" />


        <Button
            android:id="@+id/change_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/change_time"
            android:textColor="#0A0A0B"
            android:textSize="16sp" />

        <Button
            android:id="@+id/notaVoz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="Grabar nota de voz"
            android:textColor="#070707"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>